--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
   <h1>I hope it works</h1>
+  <h2> test </h2>
+  <p> hello this is a test </p>
+  <p> testttt </p>
   </body>
   </html>
