--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>This is a test</title>
+  <title>Women in Tech</title>
 </head>
 <body>
   <h1>I hope it works</h1>
