--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>This is a test</title>
+  <title>Women in Tech</title>
 </head>
 <body>
-  <h1>I hope it works</h1>
-  <h2> test </h2>
+
+
+
+
+
+
+  <h1>Home</h1>
+
+  <h2>About</h2>
+
+  <h3>News</h3>
+
+  <h4>Career Development</h4>
+
+  <div class="Career Development">
+    <button onclick="myFunction()" class="dropbtn">Career Development</button>
+    <div id="myDropdown" class="dropdown-content">
+      <a href="#Graduates">Graduates</a>
+      <a href="#Employer Profile">Employer Profile</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </div>
+
+
+  <h5>Events</h5>
+
+  <h6>Contact</h6>
+
+
+
   <p> hello this is a test </p>
   <p> testttt </p>
+
   </body>
   </html>
