--- a/index.html
+++ b/index.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Women in Tech</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/styles.css"/>
+
 </head>
 <body>
 
+<h1>Women in Tech</h1>
+
+
+<br>
+<br>
 
 
 
+<div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">About</a>
+  <a href="#news">News</a>
+  <a href="#events">Events</a>
 
 
-  <h1>Home</h1>
-
-  <h2>About</h2>
-
-  <h3>News</h3>
-
-  <h4>Career Development</h4>
-
-  <div class="Career Development">
+  <div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Career Development</button>
     <div id="myDropdown" class="dropdown-content">
-      <a href="#Graduates">Graduates</a>
-      <a href="#Employer Profile">Employer Profile</a>
-      <a href="#contact">Contact</a>
+      <a href="#home">Graduates</a>
+      <a href="#employer profile">Employer Profile</a>
+      <a href="#job search">Job Search</a>
+      <a href="#training">Training</a>
     </div>
   </div>
 
 
-  <h5>Events</h5>
+    <a href="#contact">Contact</a>
 
-  <h6>Contact</h6>
+  </div>
 
-
-
-  <p> hello this is a test </p>
-  <p> testttt </p>
-
-  </body>
-  </html>
+</body>
+</html>
