--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=np">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css"/>
 
@@ -14,8 +17,6 @@
 
 <br>
 <br>
-
-
   <h1>Home</h1>
 
 <div class="navbar">
@@ -23,7 +24,6 @@
   <a href="#news">About</a>
   <a href="#news">News</a>
   <a href="#events">Events</a>
-
 
   <div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Career Development</button>
@@ -35,14 +35,51 @@
     </div>
   </div>
 
-
-
     <a href="#contact">Contact</a>
-
   </div>
+<br>
 
-</body>
-</html>
+<main role="main" class="container">
+<div id="carouselExampleFade" class="carousel slide carousel-carouselExampleFade" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="./photo-1.jpeg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="./photo-2.jpeg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="./photo-3.jpeg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-  </body>
+<br>
+<br>
+<div>
+  <style> h2 {
+    text-align: center;
+}
+</style>
+  <h2>  About us </h2>
+<br>
+<br>
+<div>We are a society which aims to provide information, guidance and tips for women trying to enter the world of tech.
+  In our mission, we work with international charities to make this career possible for women from all backgrounds.
+  Our website will offer you the most up-to-date career opportunities, news articles and inspirational stories to help you get your dream job.
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+    <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+    </body>
   </html>
