--- a/index.html
+++ b/index.html
@@ -6,19 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=np">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
   <link rel="stylesheet" href="styles.css"/>
   <title> Women in Tech </title>
 </head>
 <body>
 
-<h1>Women in Tech</h1>
-
-
-<br>
-<br>
-
-
-  <h1>Home</h1>
+  <img src="./banner.jpeg" class="img-fluid rounded mx-auto d-block" alt="Responsive image">
 
   <nav class="navbar navbar-expand-lg">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +31,7 @@
           <a class="nav-link" href="#">News</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
+          <a class="nav-link" href="secondpage.html">Events</a>
         </li>
         <li class="nav-item">
             <a class= "nav-link" href="#">Career Development</a>
@@ -51,7 +46,6 @@
   </div>
 
   <br>
-  <br>
 
   <main role="main" class="container">
   <div id="carouselExampleFade" class="carousel slide carousel-carouselExampleFade" data-ride="carousel">
@@ -65,6 +59,9 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="./photo-3.jpeg" alt="Third slide">
       </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./womenintechawards.jpeg" alt="Fourth slide">
+      </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -76,10 +73,6 @@
     </a>
   </div>
 
-  <br>
-  <br>
-  <br>
-
   <style> h2 {
     text-align: center;
 }
@@ -87,12 +80,31 @@
   <h2>  About us </h2>
 <br>
 <br>
-<div>We are a society which aims to provide information, guidance and tips for women trying to enter the world of tech.
+<div id="aboutustext">We are a society which aims to provide information, guidance and tips for women trying to enter the world of tech.
   In our mission, we work with international charities to make this career possible for women from all backgrounds.
   Our website will offer you the most up-to-date career opportunities, news articles and inspirational stories to help you get your dream job.
 </div>
 <br>
 <br>
+<br>
+
+<img src="./factimage1.jpeg" class="rounded-circle float-left" alt="Responsive image" id="factimage1">
+<img src="./factimage3.jpeg" class="rounded-circle" alt="Responsive image" id="factimage3">
+<img src="./factimage2.jpeg" class="rounded-circle float-right w-25" alt="Responsive image" id="factimage2">
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 
   <form>
   <div class="form-group rows mx-auto">
@@ -101,6 +113,7 @@
         <input type="email" class="form-control form-control-sm center-block" id="colFormLabelSm" placeholder="Your email: sign up to our newsletter">
       </div>
     </div>
+  </div>
   </form>
 
   <br>
