--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
 <br>
 <br>
 
-<img src="./factimage1.jpeg" class="rounded-circle float-left" alt="Responsive image" id="factimage1">
-<img src="./factimage3.jpeg" class="rounded-circle" alt="Responsive image" id="factimage3">
-<img src="./factimage2.jpeg" class="rounded-circle float-right w-25" alt="Responsive image" id="factimage2">
+<img src="./factimage1.jpeg" class="img-fluid rounded-circle w-25" alt="Responsive image" id="factimage1">
+<img src="./factimage2.jpeg" class="img-fluid rounded-circle w-25" alt="Responsive image" id="factimage2">
+<img src="./factimage3.jpeg" class="img-fluid rounded-circle w-25 " alt="Responsive image" id="factimage3">
+
 
 <br>
 <br>
