--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About Us</a>
@@ -31,7 +31,7 @@
           <a class="nav-link" href="#">News</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="secondpage.html">Events</a>
+          <a class="nav-link" href=".events-page.html">Events</a>
         </li>
         <li class="nav-item">
             <a class= "nav-link" href="#">Career Development</a>
@@ -72,6 +72,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+</main>
 
   <style> h2 {
     text-align: center;
@@ -121,14 +122,14 @@
   <br>
 
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#"">Sitemap</a>
+    <a class="navbar-brand" href="#">Sitemap</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About Us</a>
@@ -137,7 +138,7 @@
           <a class="nav-link" href="#">News</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
+          <a class="nav-link" href=".events-page.html">Events</a>
         </li>
         <li class="nav-item">
             <a class= "nav-link" href="#">Contact</a>
