--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-
   <style> h2 {
     text-align: center;
 }
@@ -91,7 +90,7 @@
 <img src="./factimage1.jpeg" class="rounded-circle float-left" alt="Responsive image" id="factimage1">
 <img src="./factimage3.jpeg" class="rounded-circle" alt="Responsive image" id="factimage3">
 <img src="./factimage2.jpeg" class="rounded-circle float-right w-25" alt="Responsive image" id="factimage2">
-
+</main>
 <br>
 <br>
 <br>
