--- a/events-page.html
+++ b/events-page.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="#">News</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href=".events-page.html">Events</a>
+          <a class="nav-link" href="./events-page.html">Events</a>
         </li>
         <li class="nav-item">
             <a class= "nav-link" href="#">Career Development</a>
