--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <img src="./banner.jpeg" class="img-fluid rounded mx-auto d-block" alt="Responsive image">
 
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg ">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-auto text-center">
         <li class="nav-item active">
           <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -31,7 +31,7 @@
           <a class="nav-link" href="#">News</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href=".events-page.html">Events</a>
+          <a class="nav-link" href="./events-page.html">Events</a>
         </li>
         <li class="nav-item">
             <a class= "nav-link" href="#">Career Development</a>
@@ -42,8 +42,6 @@
       </ul>
     </div>
   </nav>
-
-  </div>
 
   <br>
 
@@ -72,7 +70,6 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-</main>
 
   <style> h2 {
     text-align: center;
@@ -81,7 +78,7 @@
   <h2>  About us </h2>
 <br>
 <br>
-<div id="aboutustext">We are a society which aims to provide information, guidance and tips for women trying to enter the world of tech.
+<div id="aboutustext"> We are a society which aims to provide information, guidance and tips for women trying to enter the world of tech.
   In our mission, we work with international charities to make this career possible for women from all backgrounds.
   Our website will offer you the most up-to-date career opportunities, news articles and inspirational stories to help you get your dream job.
 </div>
@@ -92,7 +89,7 @@
 <img src="./factimage1.jpeg" class="img-fluid rounded-circle w-25" alt="Responsive image" id="factimage1">
 <img src="./factimage2.jpeg" class="img-fluid rounded-circle w-25" alt="Responsive image" id="factimage2">
 <img src="./factimage3.jpeg" class="img-fluid rounded-circle w-25 " alt="Responsive image" id="factimage3">
-
+</main>
 
 <br>
 <br>
@@ -158,6 +155,7 @@
       </ul>
     </div>
   </nav>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
