--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
   <h2>  About us </h2>
 <br>
 <br>
-<div id="aboutustext"> We are a society which aims to provide information, guidance and tips for women trying to enter the world of tech.
-  In our mission, we work with international charities to make this career possible for women from all backgrounds.
-  Our website will offer you the most up-to-date career opportunities, news articles and inspirational stories to help you get your dream job.
+<div id="aboutustext"> We aim to help women like you into the world of technology. We bring you the latest news, jobs and events to help you get into tech.
+  Feel free to come along to our networking events or reach out to one of our career advisors to take the next step.
 </div>
 <br>
 <br>
